<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.MapsInfoWindow">

    <TextView
        android:id="@+id/detalle_spot_textView_nombre_spot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:padding="1px"
        android:paddingLeft="1px"
        android:paddingTop="0px"
        android:paddingRight="1px"
        android:paddingBottom="1px"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detalle_spot_imageView_icono_open"
            android:layout_width="43dp"
            android:layout_height="40dp"

            android:padding="1px"
            android:paddingLeft="1px"
            android:paddingTop="1px"
            android:paddingRight="1px"

            android:paddingBottom="1px" />

        <TextView
            android:id="@+id/info_window_textView_Info_clima"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="TextView"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/info_window_imageView_icono_viento"
            android:layout_width="35dp"
            android:layout_height="40dp"

            android:padding="1px"
            android:paddingLeft="1px"
            android:paddingTop="1px"
            android:paddingRight="1px"
            android:paddingBottom="1px"
            android:src="@drawable/icono_viento_2" />

        <ImageView
            android:id="@+id/info_window_imageView_icono_direccion_viento"
            android:layout_width="35sp"
            android:layout_height="37sp"
            android:padding="1px"
            android:paddingLeft="1px"
            android:paddingTop="1px"
            android:paddingRight="1px"
            android:paddingBottom="1px"
            android:src="@drawable/icono_e_wind" />

        <TextView
            android:id="@+id/info_window_textView_Info_viento"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="TextView"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/info_window_imageView_icono_mar"
            android:layout_width="43dp"
            android:layout_height="40dp"

            android:padding="1px"
            android:paddingLeft="1px"
            android:paddingTop="1px"
            android:paddingRight="1px"
            android:paddingBottom="1px"
            android:src="@drawable/icono_olas_330" />

        <TextView
            android:id="@+id/info_window_textView_Info_mar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:gravity="center"
            android:text="TextView"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/info_window_imageView_icono_wind_surf"
                android:layout_width="43dp"
                android:layout_height="49dp"
                android:padding="1px"
                android:paddingLeft="1sp"
                android:paddingTop="1px"
                android:paddingRight="1sp"
                android:paddingBottom="1px"
                android:src="@drawable/icono_windsurf" />

            <TextView
                android:id="@+id/info_window_textView_windsurf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="1sp"
                android:paddingRight="1sp"
                android:text="@string/WindSurf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/info_window_imageView_icono_kite_surf"
                android:layout_width="43dp"
                android:layout_height="40dp"
                android:padding="1px"
                android:paddingLeft="1sp"
                android:paddingTop="1px"
                android:paddingRight="1sp"
                android:paddingBottom="1px"
                android:src="@drawable/icono_kitesurfing" />

            <TextView
                android:id="@+id/info_window_textView_kitesurf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="1sp"
                android:paddingRight="1sp"
                android:text="@string/KiteSurf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/info_window_imageView_icono_surf"
                android:layout_width="43dp"
                android:layout_height="40dp"
                android:padding="1px"
                android:paddingLeft="1sp"
                android:paddingTop="1px"
                android:paddingRight="1sp"
                android:paddingBottom="1px"
                android:src="@drawable/icono_surf" />

            <TextView
                android:id="@+id/info_window_textView_surf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="1sp"
                android:paddingRight="1sp"
                android:text="@string/Surf" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>