<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <TextView
            android:id="@+id/row_lista_spot_text_view_nombre_spot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/WindSurf"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/row_lista_spot_image_view_icono_open"
                android:layout_width="30sp"
                android:layout_height="33sp"

                android:padding="1px"
                android:paddingLeft="1px"
                android:paddingTop="1px"
                android:paddingRight="1px"
                android:paddingBottom="1px"
                android:src="@drawable/icono_viento_2" />

            <TextView
                android:id="@+id/row_lista_spot_text_view_tiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1px"
                android:paddingLeft="1px"
                android:paddingTop="1px"
                android:paddingRight="1px"
                android:paddingBottom="1px"
                android:text="@string/Surf"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/row_lista_spot_image_view_icono_viento"
                android:layout_width="30sp"
                android:layout_height="33sp"

                android:padding="1px"
                android:paddingLeft="1px"
                android:paddingTop="1px"
                android:paddingRight="1px"
                android:paddingBottom="1px"
                android:src="@drawable/icono_viento_2" />

            <ImageView
                android:id="@+id/row_lista_spot_image_view_icono_direccion_viento"
                android:layout_width="35sp"
                android:layout_height="37sp"
                android:padding="1px"
                android:paddingLeft="1px"
                android:paddingTop="1px"
                android:paddingRight="1px"
                android:paddingBottom="1px"
                android:src="@drawable/icono_e_wind"/>

            <TextView
                android:id="@+id/row_lista_spot_text_view_viento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1px"
                android:paddingLeft="1px"
                android:paddingTop="1px"
                android:paddingRight="1px"
                android:paddingBottom="1px"
                android:text="@string/Surf"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/row_lista_spot_image_view_icono_oleaje"
                android:layout_width="30sp"
                android:layout_height="33sp"

                android:padding="1px"
                android:paddingLeft="1px"
                android:paddingTop="1px"
                android:paddingRight="1px"
                android:paddingBottom="1px"
                android:src="@drawable/icono_olas_310" />

            <TextView
                android:id="@+id/row_lista_spot_text_view_oleaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1px"
                android:paddingLeft="1px"
                android:paddingTop="1px"
                android:paddingRight="1px"
                android:paddingBottom="1px"
                android:text="@string/Surf"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/row_lista_spot_text_view_deportes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="1px"
            android:paddingLeft="1px"
            android:paddingTop="1px"
            android:paddingRight="1px"
            android:paddingBottom="1px"
            android:text="@string/Deportes"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/row_lista_spot_image_view_windsurf"
                    android:layout_width="43dp"
                    android:layout_height="40dp"

                    android:paddingLeft="1dp"
                    android:paddingBottom="1dp"
                    android:src="@drawable/icono_windsurf" />

                <TextView
                    android:id="@+id/row_lista_spot_text_view_infowin_windsurf"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/row_lista_spot_image_view_kitesurf"
                        android:layout_width="43dp"
                        android:layout_height="40dp"

                        android:paddingLeft="1dp"
                        android:paddingBottom="1dp"
                        android:src="@drawable/icono_kitesurfing" />

                    <TextView
                        android:id="@+id/row_lista_spot_text_view_info_kitesurf"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/row_lista_spot_image_view_surf"
                        android:layout_width="43dp"
                        android:layout_height="40dp"

                        android:paddingLeft="1dp"
                        android:paddingBottom="1dp"
                        android:src="@drawable/icono_surf" />

                    <TextView
                        android:id="@+id/row_lista_spot_text_view_info_surf"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout >

